# news-tracking

./: Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: run.yml
src/: config.py  fetcher.py  main.py  matcher.py  pusher.py  scheduler.py  store.py
tests/: test_config.py  test_fetcher.py  test_matcher.py  test_pusher.py  test_store.py
