[project]
name = "news-tracking"
version = "1.0.0"
description = "Twitter to DingTalk real-time news tracker with A-stock alerts"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
