[project]
name = "news-tracking"
version = "0.1.0"
description = "Twitter to DingTalk real-time news tracker with A-stock alerts"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "APScheduler>=3.10",
    "PyYAML>=6.0",
    "aiosqlite>=0.20",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-httpx>=0.30"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
